syntax = "proto3";

package example.enum;

option go_package = "proto/code-gen/enum";

enum EyeColor {
  EYE_COLOR_UNKNOWN=0;
  EYE_COLOR_BROWN=1;
  EYE_COLOR_BLUE=2;
  EYE_COLOR_GREEN=3;
}

message Enum {
  EyeColor eye_color = 1;
  EyeColor eye_color_number=2;
}