syntax = "proto3";

package example.maps;

option go_package = "proto/code-gen/maps";

message IdWrapper {
  uint32 id = 1;
}

message AMap {
  map<string, IdWrapper> ids = 1;
}