syntax = "proto3";

message Simple {
  uint32 number = 1;
  bool is_simple = 2;
  string name = 3;
  repeated int32 sample_list = 11;
}